<resources>
    <string name="app_name">RT</string>
    <!-- Navigation Drawer -->

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="userHint">Enter Username</string>
    <string name="loginId">Login ID</string>
    <string name="passHint">Password</string>

    <string name="login">Login</string>
    <string name="btnSubmit">Login</string>
    <string name="rememberMe">Remember me</string>
    <string name="saveCredentials">Save Credentials</string>
    <string name="username">Username</string>

    <string name="hintUser">Enter Username</string>
    <string name="hintPass">Enter Password</string>

    <string name="selectStRef">St Ref. #</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go</string>
    <string name="back">Back</string>

    <string name="hintBatch">Batch#</string>
    <string name="hintSerial">Serial No.</string>
    <string name="hintMfgDate">Mfg. Date</string>
    <string name="hintExpDate">Exp. Date</string>
    <string name="hintProjectRef">Project Ref.#</string>
    <string name="hintKitId">Kit Id</string>
    <string name="hintQuantity">Enter Qty.</string>
    <string name="hintQty">Qty.</string>
    <string name="hintCCQty">CC Qty.</string>
    <string name="hintServiceURL">Service URL</string>
    <string name="serialNo">Serial No. </string>
    <string name="hintLocation">Location</string>
    <string name="hintBoxQty">Box Qty.</string>
    <string name="hintAvailQty">Avail. Qty.</string>

    <string name="clear">Clear</string>
    <string name="btnSkip">Skip</string>

    <string name="menu_masterdata">Master Data</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_inbound">Inbound</string>
    <string name="menu_outbound">Outbound</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_3pl">3pl</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_goodsIn">Goods In</string>
    <string name="menu_putaway">Putaway</string>
    <string name="menu_liveStock">Live Stock</string>
    <string name="menu_obdPicking">OBD Picking</string>
    <string name="menu_obdPicklist">OBD pick list</string>
    <string name="menu_vlpdList">VLPD List</string>
    <string name="menu_vlpdPick">VLPD Picking</string>
    <string name="menu_internalTransfer">Internal Transfer</string>
    <string name="menu_cycleCount">Cycle Count</string>
    <string name="menu_binTransfer">Bin Transfer</string>

    <string name="search">Search</string>

    <string name="obdQty">OBD Qty.</string>
    <string name="pickedQty">Picked Qty.</string>
    <string name="obdRef">OBD Ref #</string>

    <string name="confirm">Confirm</string>

    <string name="selectPrinter">Select Printer</string>
    <string name="save">Save</string>

    <string name="title_activity_navigation_menu">NavigationMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>

    <string name="title_activity_live_stock">Live Stock</string>
    <string name="title_activity_batch_picking">Batch Pick</string>
    <string name="title_activity_transfer">Internal Transfer</string>

    <string name="title_activity_settings">Settings</string>

    <string name="update">Update</string>
    <string name="fragment_about_txt_version">Version :</string>
    <string name="fragment_about_txt_visit">Visit :</string>
    <string name="fragment_about_txt_copy_right">Copyright © 2016 Inventrax, All rights reserved.</string>
    <string name="fragment_about_txt_inventrax_link">www.inventrax.com</string>
    <string name="nav_item_home">Home</string>
    <string name="title_about">About</string>
    <string name="fragment_about_txt_ReleaseDate">Release Date :</string>


    <string name="remove">Remove</string>

    <string name="location">Location </string>
    <string name="material">Material </string>


    <string name="sku">SKU</string>


    <string name="batch">Batch No. </string>





    <string name="delete">Delete</string>

    <string name="skip">Skip</string>
    <string name="ok_">OK</string>

    <string name="ccexport">Export</string>
    <string name="start">Start</string>
    <string name="pick">Pick</string>
    <string name="goBack"><![CDATA[<<]]></string>
    <string name="reprint">Reprint</string>
    <string name="details">Details</string>
    <string name="transfer">Transfer</string>
</resources>