<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="9">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutPartNo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:gravity="center">

            <EditText
                android:id="@+id/etPartNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Part#"
                android:inputType="text" />
            <!--android:text="RT230000300003"-->
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutBatch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:gravity="center">

            <EditText
                android:id="@+id/etBatch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/batch"
                android:inputType="text" />
            <!--android:text="006835-001"-->
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtInputLayoutLocation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:gravity="center">

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/location"
                android:inputType="text" />
            <!--android:text="P101A01"-->
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="horizontal"
            android:weightSum="2">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/button_shape"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/button_shape"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="4.3"
            android:scrollbarAlwaysDrawHorizontalTrack="true">

            <HorizontalScrollView
                android:layout_height="wrap_content"
                android:scrollbars="horizontal|vertical"
                android:layout_width="wrap_content"
                >

                <TableLayout
                    android:id="@+id/table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    android:stretchColumns="0,1"

                    />

            </HorizontalScrollView>

        </ScrollView>


    </LinearLayout>


    <Button
        android:id="@+id/btnClose"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_close_shape"
        android:elevation="30dp"
        android:foreground="@drawable/button_cross_close"
        android:foregroundGravity="center"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>



