<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.NoActionBar.FullScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <RelativeLayout
        android:id="@+id/rlLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rt_logo" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rlLogo"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">


        <!--<com.inventrax.athome.util.NoImeEditText
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:layout_alignParentLeft="true">

            <EditText
                android:id="@+id/etUsername"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/email_img"
                android:drawablePadding="@dimen/activity_login_padding_left"
                android:hint="@string/loginId"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="105dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <EditText
                android:id="@+id/etPass"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock_img"
                android:drawablePadding="@dimen/activity_login_padding_left"
                android:fontFamily="sans-serif"
                android:hint="@string/passHint"
                android:inputType="textPassword"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>



        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayoutPassword"
            android:buttonTint="@color/colorAccent"
            android:text="@string/saveCredentials" />

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbRememberMe"
            android:layout_marginTop="65dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <!--<Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="Exit"
                android:textAllCaps="false"
                android:textColor="@color/white" />
-->
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.05"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="0.9"
                android:background="@drawable/button_shape"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.05"/>

        </LinearLayout>


       <!-- <TextView
            android:id="@+id/txtVersionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llButtons"
            android:layout_marginTop="40dp"
            android:text="Version" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtVersionName"
            android:layout_marginTop="3dp"
            android:text="Release Date" />-->
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/settings" />
</RelativeLayout>